before try doing reusable components for each tabs

--- a/SSDI.RequestMonitoring.UI/JComponents/Forms/JobOrder__Form.razor
+++ b/SSDI.RequestMonitoring.UI/JComponents/Forms/JobOrder__Form.razor
@@ -228,7 +228,7 @@
             var attachVM = new Job_Order_AttachVM
             {
                 UniqId = utils.GenerateUniqId(),
-                PurchaseRequestId = FormModel.Id,
+                JobOrderId = FormModel.Id,
                 FileName = file.Name,
                 ContentType = file.ContentType,
                 ImgData = fileBytes,
