--- a/SSDI.RequestMonitoring.UI/JComponents/Forms/JobOrderRequisition__Form.razor
+++ b/SSDI.RequestMonitoring.UI/JComponents/Forms/JobOrderRequisition__Form.razor
@@ -270,7 +270,7 @@
             var attachVM = new Job_Order_AttachVM
             {
                 UniqId = utils.GenerateUniqId(),
-                PurchaseRequestId = FormModel.Id,
+                JobOrderId = FormModel.Id,
                 FileName = file.Name,
                 ContentType = file.ContentType,
                 ImgData = fileBytes,
