--- a/SSDI.RequestMonitoring.UI/Layout/MainLayout.razor
+++ b/SSDI.RequestMonitoring.UI/Layout/MainLayout.razor
@@ -13,7 +13,11 @@
         <FluentToastProvider MaxToastCount="10" />
     </FluentStack>
 </FluentLayout> *@
-
+<FluentToastProvider />
+<FluentDialogProvider />
+<FluentTooltipProvider />
+<FluentMessageBarProvider />
+<FluentMenuProvider />
 <FluentLayout>
     <FluentHeader Style="background-color: #094171;">
         <Navbar />
