--- a/SSDI.RequestMonitoring.UI/Pages/Requests/JobOrder/JobOrder_Details.razor
+++ b/SSDI.RequestMonitoring.UI/Pages/Requests/JobOrder/JobOrder_Details.razor
@@ -5,10 +5,12 @@
 @using SSDI.RequestMonitoring.UI.JComponents.Modals
 @using SSDI.RequestMonitoring.UI.Pages.Requests.JobOrder.Modals
 @using SSDI.RequestMonitoring.UI.Services.Adapters.Requests
+@using SSDI.RequestMonitoring.UI.Services.Adapters.Requests.RequisitionSlip
 @inject IJobOrderSvc jobOrderSvc
 @inject NavigationManager navigationManager
 @inject IJSRuntime jsRuntime
 @inject JOAttachSvcAdapter joAttachAdapter
+@inject JORequisitionSvcAdapter joRequisitionSvcAdapter
 
 <PageTitle>Job Order #@Request?.Id</PageTitle>
 
@@ -97,7 +99,9 @@
                         }
                         else if (ActiveTab == "slips")
                         {
-                            <JobOrderRequisitionSlips__Control Request="Request" ConfirmModal="confirmModal" />
+                            @* <JobOrderRequisitionSlips__Control Request="Request" ConfirmModal="confirmModal" /> *@
+                            <RequestRequisition__Control Request="Request" AttachSvc="joAttachAdapter" SlipSvc="joRequisitionSvcAdapter" OnRequestChanged="Reload" ConfirmModal="confirmModal" />
+
                         }
                         else if (ActiveTab == "approval")
                         {
