--- a/SSDI.RequestMonitoring.UI/Pages/Requests/PurchaseRequest/Modals/NewRequisition__Modal.razor
+++ b/SSDI.RequestMonitoring.UI/Pages/Requests/PurchaseRequest/Modals/NewRequisition__Modal.razor
@@ -1,12 +1,10 @@
 ﻿@using SSDI.RequestMonitoring.UI.Contracts.Requests
+@using SSDI.RequestMonitoring.UI.Contracts.Requests.Common
 @using SSDI.RequestMonitoring.UI.Contracts.Requests.Purchase
 @using SSDI.RequestMonitoring.UI.JComponents.Forms
 @using SSDI.RequestMonitoring.UI.JComponents.Modals
 
-
-@inject IPRRequisitionSvc slipSvc
-@inject IPRAttachSvc attachSvc
-
+ 
 <Confirmation__Modal @ref="confirmModal" />
 <div class="modal__overlay" id="@(IsModalVisible ? "show__new__purchase-requisition-modal" : "hide__new__purchase-requisition-modal")">
     <div class="modal">
@@ -18,6 +16,6 @@
             <Alert Message="@AlertMessage" Type="AlertType.error" ShowCloseButton="false" @bind-IsVisible="IsShowAlert" />
         </div>
 
-        <PurchaseReqRequisition__Form FormModel="@Model" OnValidSubmit="HandleSave" OnCloseModal="CloseModal" IsDisabledBtns="@_isDisabledBtns" SelectedFiles="@Attachments" />
+        <RequestRequisition__Form FormModel="@Model" OnValidSubmit="HandleSave" OnCloseModal="CloseModal" IsDisabledBtns="@_isDisabledBtns" SelectedFiles="@Attachments" />
     </div>
 </div>
